add route to get sl token
